RESOLVED FIXED128323
[Win] Correct IME Regression after r141479
https://bugs.webkit.org/show_bug.cgi?id=128323
Summary [Win] Correct IME Regression after r141479
Brent Fulgham
Reported 2014-02-06 12:09:34 PST
Some sloppy refactoring in http://trac.webkit.org/changeset/141479 broke IME under Windows.
Attachments
Patch (1.28 KB, patch)
2014-02-06 12:11 PST, Brent Fulgham
no flags
Patch (1.82 KB, patch)
2014-02-06 12:15 PST, Brent Fulgham
no flags
Patch (1.28 KB, patch)
2014-02-06 12:22 PST, Brent Fulgham
thorton: review+
Brent Fulgham
Comment 1 2014-02-06 12:11:32 PST
Brent Fulgham
Comment 2 2014-02-06 12:15:43 PST
Brent Fulgham
Comment 3 2014-02-06 12:16:23 PST
Comment on attachment 223365 [details] Patch Remove extraneous cancelComposition, since the refactored Editor::cancelCompositionIfSelectionIsInvalid() already does this.
Tim Horton
Comment 4 2014-02-06 12:22:14 PST
Comment on attachment 223365 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=223365&action=review > Source/WebKit/win/WebView.cpp:-5556 > - if (targetFrame) > - targetFrame->editor().cancelComposition(); > - updateSelectionForIME is not the only caller of resetIME, please revert this part.
Brent Fulgham
Comment 5 2014-02-06 12:22:48 PST
Brent Fulgham
Comment 6 2014-02-06 12:33:56 PST
Brent Fulgham
Comment 7 2014-02-06 12:44:35 PST
Note You need to log in before you can comment on or make changes to this bug.