[Win] Correct IME Regression after r141479 https://bugs.webkit.org/show_bug.cgi?id=128323 <rdar://problem/15952986>

Reviewed by Tim Horton.

* WebView.cpp:
(WebView::updateSelectionForIME): Refactoring flipped the meaning of the test used
to select the resetIME case. Corrected for behavior of new cancel method.


Canonical link: https://commits.webkit.org/146339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163557 268f45cc-cd09-0410-ab3c-d52691b4dbfc